--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1364,7 +1364,7 @@ auto func_b_seperated(auto& Seperated p) -> void {
 \subsection{Memory Layout and Alignment}
 \subsubsection{Alignment vs Size}
 \subsubsection{Tight Packing vs Padding}
-\subsubsection{AoS vs SoA vs AoSoA
+\subsubsection{AoS vs SoA vs AoSoA}
 Suppose you have the following representation of a physics owning entity represented as a fat struct
 \begin{lstlisting}
 struct Transform {
