--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1590,7 +1590,7 @@ It is important to check if those have hardware support (i.e. work lock free), t
 \subsection{Scheduling}
 \subsection{CPU Virtualisation}
 \subsection{Memory Virtualisation}
-Suppose your pages are 16 bytes in size
+Suppose your pages are 16 bytes in size then you need 4 bits to address all elements in a page. Suppose furthermore you have 4 virtual pages (alwa
 
 \subsubsection{Paging, TLB}
 Paging as opposed to segmentation slices up the availiable virtual memory into fixed-size pieces.
