--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 
-\usepackage[hidelinks]{hyperref}
+\usepackage[hidelinks, bookmarks=false]{hyperref}
 \urlstyle{same}
 
 \usepackage{fontspec}
